<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Travel App</string>
    <string name="action_settings">Settings</string>
    <string name="check_in_text">Enter Check-in Station:</string>
    <string name="check_out_text">Enter Check-out Station:</string>
    <string name="check_in_button">Check In</string>
    <string name="check_out_button">Check Out</string>
    <string name="title_activity_stations">Stations</string>
    <string name="select">Select</string>
    <string name="title_activity_history">HistoryActivity</string>


    <string name="list_summary">Amount of travels shown in the history.</string>
    <string name="list_title">Number of travels shown</string>
    <string-array name="list">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="add_station_check">Station added already</string>
    <string name="title_activity_invite">InviteActivity</string>
    <string name="current_location">Get current location</string>


</resources>
