<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="History Settings" >

        <ListPreference
            android:key="history_length"
            android:entries="@array/list"
            android:entryValues="@array/list"
            android:defaultValue="10"
            android:summary="@string/list_summary"
            android:title="@string/list_title"
        />

        <Preference
            android:key="clr_history"
            android:title="Clear History"
            android:summary="If you want your privacy back"
        />


    </PreferenceCategory>

    <PreferenceCategory android:title="Station settings" >

        <CheckBoxPreference
            android:title="@string/add_station_check"
            android:summary="Checks if a station is already added"
            android:key="add_station_check"
            android:defaultValue="true"


        />

        <Preference
            android:key="clr_stations"
            android:title="Clear Stations"
            android:summary="Remove all user inputted stations"

        />


    </PreferenceCategory>


</PreferenceScreen>