<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".TravelActivity" >

    <TextView
        android:id="@+id/check_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="top"
        android:text="@string/check_in_text" />

    <Button
        android:id="@+id/selectInButton"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/check_in_text"
        android:layout_alignParentRight="true"
        android:text="@string/select"
        />

    <EditText
        android:id="@+id/check_in_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/selectInButton"
        android:layout_toLeftOf="@id/selectInButton"
        android:inputType="text" />

    <TextView
        android:id="@+id/check_out_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/check_in_input"
        android:layout_centerHorizontal="true"
        android:text="@string/check_out_text" />

    <Button
        android:id="@+id/selectOutButton"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/check_out_text"
        android:layout_alignParentRight="true"
        android:enabled="false"
        android:text="@string/select"
        />


    <EditText
        android:id="@+id/check_out_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/selectOutButton"
        android:layout_toLeftOf="@id/selectOutButton"
        android:enabled="false"
        android:inputType="text" />

    <Button
        android:id="@+id/check_in_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/check_out_input"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:text="@string/check_in_button"/>

    <Button
        android:id="@+id/check_out_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/check_out_input"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:text="@string/check_out_button" />

    <TextView
        android:id="@+id/get_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:enabled="true"
        android:clickable="true"
        android:layout_below="@id/check_in_button"
        android:text="@string/current_location"
        />


</RelativeLayout>